--- a/src/styles/quasar.css
+++ b/src/styles/quasar.css
@@ -1,10 +1,9 @@
 /* Error: Can't find stylesheet to import.
- *    ,
- * 15 | @import '~quasar-variables-styl'
- *    |         ^^^^^^^^^^^^^^^^^^^^^^^^
- *    '
- *   quasar.variables.scss 15:9  @import
- *   quasar.scss 1:9             root stylesheet */
+ *   ,
+ * 1 | @import '~quasar-styl';
+ *   |         ^^^^^^^^^^^^^^
+ *   '
+ *   quasar.scss 1:9  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a    \2577 \a 15 \2502  @import '~quasar-variables-styl'\a    \2502          ^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   quasar.variables.scss 15:9  @import\a   quasar.scss 1:9             root stylesheet";
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @import '~quasar-styl';\a   \2502          ^^^^^^^^^^^^^^\a   \2575 \a   quasar.scss 1:9  root stylesheet";
 }
