--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -4,14 +4,31 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: $ws-medium-jungle-gray;
-  margin-top: 60px;
 }
 form {
-  width: 300px;
+  width: 400px;
+  padding: 20px 10px;
   .q-input, .q-textarea {
-    margin-top: 20px;
+    margin-top: 10px;
   }
   .q-field__control {
     height: 54px;
+  }
+}
+
+h4 {
+  margin-bottom: 0;
+}
+
+.user-cards {
+  text-align: left;
+  .emails {
+    display: inline-flex;
+    ul {
+      display: inline-block;
+      margin: 0;
+      list-style: none;
+      padding: 0 0 0 10px;
+    }
   }
 }
