--- a/src/styles/_dark_theme.scss
+++ b/src/styles/_dark_theme.scss
@@ -13,6 +13,19 @@ body.body--dark {
     color: $ws-light,
   }
 
+  .phoneField {
+    span {
+      color: $ws-light,
+    }
+    select option {
+      color: $ws-light;
+      background: $ws-medium-jungle-gray;
+      &:hover {
+        background: $ws-medium-jungle-gray;
+      }
+    }
+  }
+
   .q-btn {
     background: $ws-emerald;
   }
